--- a/about.html
+++ b/about.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      About me - Oksana Kryvulya, SheCodes student, Based in Ukraine
+    </title>
+    <meta
+      name="description"
+      content="Information and contact data of Oksana Kryvulya, SheCodes student, Based in Ukraine"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +23,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <title>About Oksana</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -62,13 +68,25 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="/images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/yoga.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Yoga project"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="/images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/yogurt.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Yogurt project"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="/images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/weather.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Weather project"
+          />
         </div>
       </div>
     </div>
