--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oksana</title>
+    <title>
+      Portfolio of Oksana Kryvulya, SheCodes student, based in Ukraine
+    </title>
+    <meta
+      name="description"
+      content="Oksana Kryvulya, SheCodes student, based in Ukraine, projects description and about info."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -60,13 +66,20 @@
       SheCodes student, based in Ukraine
     </h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="contact-link"
+        title="Contact Oksana Kryvulya"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About Oksana Kryvulya"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <img src="/images/yoga.png" class="img-fluid" />
+        <div class="col-md-6 d-none d-sm-block">
+          <img src="/images/yoga.png" class="img-fluid" alt="Yoga project" />
         </div>
         <div class="col-md-6">
           <h2>Yoga app</h2>
@@ -93,16 +106,26 @@
           </p>
           <br />
           <div class="button-app-link">
-            <a href="" class="app-link"> Launch Yogurt App </a>
+            <a href="" class="app-link" title="Yogurt project">
+              Launch Yogurt App
+            </a>
           </div>
         </div>
-        <div class="col-md-6">
-          <img src="/images/yogurt.png" class="img-fluid" />
+        <div class="col-md-6 d-none d-sm-block">
+          <img
+            src="/images/yogurt.png"
+            class="img-fluid"
+            alt="Yogurt project"
+          />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
-          <img src="/images/weather.png" class="img-fluid" />
+        <div class="col-md-6 d-none d-sm-block">
+          <img
+            src="/images/weather.png"
+            class="img-fluid"
+            alt="Weather project"
+          />
         </div>
         <div class="col-md-6">
           <h2>Weather app</h2>
@@ -114,7 +137,9 @@
           </p>
           <br />
           <div class="button-app-link">
-            <a href="" class="app-link"> Launch Weather App </a>
+            <a href="" class="app-link" title="Weather project">
+              Launch Weather App
+            </a>
           </div>
         </div>
       </div>
