--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 d-none d-sm-block">
+        <div class="col-sm-6 d-none d-sm-block">
           <img src="/images/yoga.png" class="img-fluid" alt="Yoga project" />
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2>Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
+      <div class="row mt-sm-3 mt-md-5">
+        <div class="col-sm-6">
           <h2>Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -111,7 +111,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-6 d-none d-sm-block">
+        <div class="col-sm-6 d-none d-sm-block">
           <img
             src="/images/yogurt.png"
             class="img-fluid"
@@ -119,15 +119,15 @@
           />
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-md-6 d-none d-sm-block">
+      <div class="row mt-sm-3 mt-md-5">
+        <div class="col-sm-6 d-none d-sm-block">
           <img
             src="/images/weather.png"
             class="img-fluid"
             alt="Weather project"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2>Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
